# client

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
extlibs/: CMakeLists.txt
source/: CMakeLists.txt  main.cpp
source/api/: ApiService.cpp  ApiService.hpp  CMakeLists.txt
source/core/: CMakeLists.txt  Client.cpp  Client.hpp
source/modules/: CMakeLists.txt  DebugDetector.cpp  DebugDetector.hpp  MemoryScanner.cpp  MemoryScanner.hpp  SandboxDetector.cpp  SandboxDetector.hpp
